Update automerge rules

--- a/packages/renovate-config/package.json
+++ b/packages/renovate-config/package.json
@@ -42,23 +42,21 @@
           "security"
         ]
       },
-      "commitBody": "(patch)",
-      "packageRules": [
-        {
-          "updateTypes": [
-            "patch",
-            "pin",
-            "digest"
-          ],
-          "automerge": true
-        },
-        {
-          "depTypeList": [
-            "devDependencies"
-          ],
-          "automerge": true
-        }
-      ]
+
+      "commitBody": "Dependency update (patch)",
+
+      "patch": {
+        "automerge": true
+      },
+      "pin": {
+        "automerge": true
+      },
+      "digest": {
+        "automerge": true
+      },
+      "devDependencies": {
+        "automerge": true
+      }
     }
   },
   "gitHead": "820c1e2c22d9483681773fc6d83cc7156c8faadb"
