Automerge peerDependencies and optionalDependencies

--- a/packages/renovate-config/package.json
+++ b/packages/renovate-config/package.json
@@ -55,7 +55,9 @@
         },
         {
           "depTypeList": [
-            "devDependencies"
+            "devDependencies",
+            "peerDependencies",
+            "optionalDependencies"
           ],
           "automerge": true
         }
