--- a/lerna.json
+++ b/lerna.json
@@ -7,12 +7,11 @@
   "command": {
     "publish": {
       "allowBranch": "master",
-      "conventionalCommits": true,
       "exact": true,
       "ignoreChanges": ["ignored-file", "**/__tests__/**", "**/*.md"]
     },
     "version": {
-      "message": "Publish %s (ignore)"
+      "message": "Release (ignore)"
     }
   }
 }
